# inventory_management_app

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  REQUIREMENTS.md  REVIEW_SUMMARY.md  docker-compose.yaml  netlify.toml  railway.toml  render.yaml  requirements.txt  vercel.json
backend/: .dockerignore  Dockerfile  auth.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  pytest.ini  rate_limit.py  requirements.txt  schemas.py  seed_data.py
backend/domain/: __init__.py  entities.py  exceptions.py
backend/repositories/: __init__.py  interfaces.py  sqlalchemy_repositories.py
backend/routers/: customers.py  dashboard.py  orders.py  products.py
backend/services/: __init__.py  customer_service.py  order_service.py  product_service.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_dependencies.py  test_domain_entities.py  test_domain_exceptions.py  test_rate_limit.py  test_services.py
frontend/: .dockerignore
frontend/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/frontend/src/: App.jsx
frontend/frontend/src/api/: customers.js  dashboard.js  index.js  orders.js  products.js
frontend/frontend/src/components/: CustomersView.jsx  DashboardView.jsx  Header.jsx  Loading.jsx  Login.jsx  Modal.jsx  Navigation.jsx  OrdersView.jsx  ProductsView.jsx
